syntax = "proto3";

package report;

service ReportService{
    rpc CreateReport (CreateReportDto) returns (Report) {}
    rpc FindReportsByMarket (FindReportsByMarketDto) returns (ReportsList) {}
    rpc GetReportById(FindReportById) returns (Report){}
}

message FindReportById{
    string id = 1;
}

message FindReportsByMarketDto{
    string id = 1;
    int32 page = 2;
    int32 limit = 3;
}

message ReportsList{
    repeated Report reports = 1;
}

message CreateReportDto{
    string reason = 1;
    User user = 2;
    Market market = 3;
    Product product = 4;
}

message Report{
    string id = 1;
    string reason = 2;
    Status status = 3;
    string dateAttended = 4;
    User user = 5;
    Market market = 6;
    Product  product = 7;
}

enum Status{
    ATTENDED = 0;
    UNATTENDED = 1;
}

message User{
    string id = 1;
    string name = 2;
    string lastname = 3;
    string email = 4;
}

message Market{
    string id = 1;
    string name =2;
    string urlImg=3;
}

message Product{
    string id = 1;
    string brand = 2;
    string name = 3;
    string urlImg = 4;
}